@@ -34,14 +34,14 @@ package megamek.ai.dataset;
 
 import static org.apache.commons.lang3.ObjectUtils.firstNonNull;
 
-import megamek.common.units.Entity;
-import megamek.common.game.Game;
-import megamek.common.equipment.INarcPod;
-import megamek.common.units.UnitRole;
 import megamek.common.actions.AbstractAttackAction;
 import megamek.common.actions.ArtilleryAttackAction;
 import megamek.common.actions.WeaponAttackAction;
 import megamek.common.enums.AimingMode;
+import megamek.common.equipment.INarcPod;
+import megamek.common.game.Game;
+import megamek.common.units.Entity;
+import megamek.common.units.UnitRole;
 
 /**
  * Flexible container for unit attack data using a map-based approach with enum keys.
@@ -182,7 +182,7 @@ public class UnitAttack extends EntityDataMap<UnitAttack.Field> {
         // Attack-specific information
         if (attackAction instanceof ArtilleryAttackAction artilleryAttackAction) {
             if (!artilleryAttackAction.getSpotterIds().isEmpty()) {
-                map.put(Field.SPOTTER_ID, artilleryAttackAction.getSpotterIds().get(0));
+                map.put(Field.SPOTTER_ID, artilleryAttackAction.getSpotterIds().getFirst());
             }
             map.put(Field.TURNS_TO_HIT, artilleryAttackAction.getTurnsTilHit())
                   .put(Field.TO_HIT, artilleryAttackAction.toHit(game).getValue())
