@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2000-2005 Ben Mazur (bmazur@sev.org)
  * Copyright (C) 2013 Edward Cullen (eddy@obsessedcomputers.co.uk)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -37,6 +37,7 @@ package megamek.client.ui.clientGUI;
 import static megamek.common.compute.Compute.d6;
 
 import java.awt.*;
+import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
@@ -78,18 +79,21 @@ import megamek.client.bot.ui.swing.BotGUI;
 import megamek.client.ui.Messages;
 import megamek.client.ui.boardeditor.BoardEditorPanel;
 import megamek.client.ui.clientGUI.tooltip.PilotToolTip;
-import megamek.client.ui.dialogs.CommonAboutDialog;
-import megamek.client.ui.dialogs.ConfirmDialog;
+import megamek.client.ui.dialogs.LicensingDialog;
+import megamek.client.ui.dialogs.MMAboutDialog;
 import megamek.client.ui.dialogs.ScenarioDialog;
 import megamek.client.ui.dialogs.UnitLoadingDialog;
 import megamek.client.ui.dialogs.buttonDialogs.BotConfigDialog;
 import megamek.client.ui.dialogs.buttonDialogs.CommonSettingsDialog;
 import megamek.client.ui.dialogs.buttonDialogs.GameOptionsDialog;
+import megamek.client.ui.dialogs.buttonDialogs.NetworkInformationDialog;
 import megamek.client.ui.dialogs.clientDialogs.PlanetaryConditionsDialog;
 import megamek.client.ui.dialogs.gameConnectionDialogs.ConnectDialog;
 import megamek.client.ui.dialogs.gameConnectionDialogs.HostDialog;
 import megamek.client.ui.dialogs.helpDialogs.HelpDialog;
 import megamek.client.ui.dialogs.helpDialogs.MMReadMeHelpDialog;
+import megamek.client.ui.dialogs.randomArmy.AbstractRandomArmyDialog;
+import megamek.client.ui.dialogs.randomArmy.MMMainMenuRandomArmyDialog;
 import megamek.client.ui.dialogs.scenario.ScenarioChooserDialog;
 import megamek.client.ui.dialogs.unitSelectorDialogs.MainMenuUnitBrowserDialog;
 import megamek.client.ui.enums.DialogResult;
@@ -158,6 +162,8 @@ public class MegaMekGUI implements IPreferenceChangeListener {
     private ManagedVolatileImage logoImage;
     private ManagedVolatileImage medalImage;
     private TipOfTheDay tipOfTheDay;
+    private AbstractRandomArmyDialog randomArmyDialog;
+    private NetworkInformationDialog networkInformationDialog;
 
     private static MegaMekController controller;
 
@@ -219,19 +225,9 @@ public class MegaMekGUI implements IPreferenceChangeListener {
         // Show the window.
         frame.setVisible(show);
 
-        // tell the user about the readme...
-        if (show && GUIPreferences.getInstance().getNagForReadme()) {
-            ConfirmDialog confirm = new ConfirmDialog(frame,
-                  Messages.getString("MegaMek.welcome.title") + MMConstants.VERSION,
-                  Messages.getString("MegaMek.welcome.message"),
-                  true);
-            confirm.setVisible(true);
-            if (!confirm.getShowAgain()) {
-                GUIPreferences.getInstance().setNagForReadme(false);
-            }
-            if (confirm.getAnswer()) {
-                new MMReadMeHelpDialog(frame).setVisible(true);
-            }
+        // Show licensing/welcome dialog
+        if (show) {
+            LicensingDialog.showIfNeeded(frame);
         }
     }
 
@@ -317,10 +313,10 @@ public class MegaMekGUI implements IPreferenceChangeListener {
         frame.setForeground(SystemColor.menuText);
         frame.setResizable(false);
 
-        JLabel labVersion = new JLabel(Messages.getString("MegaMek.Version") + MMConstants.VERSION, JLabel.CENTER);
+        JLabel labVersion = new JLabel(Messages.getString("MegaMek.Version", MMConstants.VERSION), JLabel.CENTER);
         labVersion.setPreferredSize(new Dimension(250, 15));
         if (!skinSpec.fontColors.isEmpty()) {
-            labVersion.setForeground(skinSpec.fontColors.get(0));
+            labVersion.setForeground(skinSpec.fontColors.getFirst());
         }
         MegaMekButton hostB = new MegaMekButton(Messages.getString("MegaMek.hostNewGame.label"),
               UIComponents.MainMenuButton.getComp(),
@@ -369,12 +365,9 @@ public class MegaMekGUI implements IPreferenceChangeListener {
         // Use the current monitor, so we don't "overflow" computers whose primary
         // displays aren't as large as their secondary displays.
         Dimension scaledMonitorSize = UIUtil.getScaledScreenSize(frame);
-        Image splashImage = getImage(FILENAME_MEGAMEK_SPLASH, scaledMonitorSize.width, scaledMonitorSize.height);
-        logoImage = new ManagedVolatileImage(getImage(FILENAME_LOGO, scaledMonitorSize.width, scaledMonitorSize.height),
-              Transparency.TRANSLUCENT);
-        medalImage = new ManagedVolatileImage(getImage(FILENAME_MEDAL,
-              scaledMonitorSize.width,
-              scaledMonitorSize.height), Transparency.TRANSLUCENT);
+        Image splashImage = getImage(FILENAME_MEGAMEK_SPLASH);
+        logoImage = new ManagedVolatileImage(getImage(FILENAME_LOGO), Transparency.TRANSLUCENT);
+        medalImage = new ManagedVolatileImage(getImage(FILENAME_MEDAL), Transparency.TRANSLUCENT);
         Dimension splashPanelPreferredSize = calculateSplashPanelPreferredSize(scaledMonitorSize, splashImage);
         // This is an empty panel that will contain the splash image
         // Draw background, border, and children first
@@ -1037,7 +1030,7 @@ public class MegaMekGUI implements IPreferenceChangeListener {
             }
 
             HostDialog hd = new HostDialog(frame);
-            if (!("".equals(sd.localName))) {
+            if (!sd.localName.isEmpty()) {
                 hasSlot = true;
             }
             hd.setPlayerName(sd.localName);
@@ -1085,8 +1078,10 @@ public class MegaMekGUI implements IPreferenceChangeListener {
                     Princess c = new Princess(pa[x].getName(), MMConstants.LOCALHOST, port);
                     c.startPrecognition();
                     if (scenario.hasBotInfo(pa[x].getName()) &&
-                          scenario.getBotInfo(pa[x].getName()) instanceof BotParser.PrincessRecord princessRecord) {
-                        c.setBehaviorSettings(princessRecord.behaviorSettings());
+                          scenario.getBotInfo(pa[x].getName()) instanceof BotParser.PrincessRecord(
+                                megamek.client.bot.princess.BehaviorSettings behaviorSettings
+                          )) {
+                        c.setBehaviorSettings(behaviorSettings);
                     }
                     c.getGame().addGameListener(new BotGUI(frame, c));
                     c.connect();
@@ -1224,6 +1219,11 @@ public class MegaMekGUI implements IPreferenceChangeListener {
         if (tipOfTheDay != null) {
             tipOfTheDay.stopCycling();
         }
+        // clean up disposable things
+        if (randomArmyDialog != null) {
+            randomArmyDialog.dispose();
+            randomArmyDialog = null;
+        }
         // listen to new frame
         launched.addWindowListener(new WindowAdapter() {
             @Override
@@ -1257,6 +1257,11 @@ public class MegaMekGUI implements IPreferenceChangeListener {
             SwingUtilities.invokeLater(postAction);
         }
 
+        // on Mac, override auto-added "Quit MM" behavior; in the main menu, it can simply quit
+        if (Desktop.isDesktopSupported() && Desktop.getDesktop().isSupported(Desktop.Action.APP_QUIT_HANDLER)) {
+            Desktop.getDesktop().setQuitHandler(null);
+        }
+
         // just to free some memory
         client = null;
         System.gc();
@@ -1282,7 +1287,7 @@ public class MegaMekGUI implements IPreferenceChangeListener {
                 host();
                 break;
             case ClientGUI.FILE_GAME_SCENARIO:
-                if ((ev.getModifiers() & Event.CTRL_MASK) != 0) {
+                if ((ev.getModifiers() & ActionEvent.CTRL_MASK) != 0) {
                     // As a dev convenience, start the last scenario again when clicked with CTRL
                     scenario(PreferenceManager.getClientPreferences().getLastScenario());
                 } else {
@@ -1304,8 +1309,11 @@ public class MegaMekGUI implements IPreferenceChangeListener {
             case ClientGUI.FILE_GAME_QUICK_LOAD:
                 quickLoadGame();
                 break;
+            case ClientGUI.VIEW_NETWORK_INFORMATION:
+                showNetworkInformation();
+                break;
             case ClientGUI.HELP_ABOUT:
-                new CommonAboutDialog(frame).setVisible(true);
+                new MMAboutDialog(frame).show();
                 break;
             case ClientGUI.HELP_CONTENTS:
                 new MMReadMeHelpDialog(frame).setVisible(true);
@@ -1328,8 +1336,28 @@ public class MegaMekGUI implements IPreferenceChangeListener {
                 new Thread(unitSelectorDialog, "Mek Selector Dialog").start();
                 unitSelectorDialog.setVisible(true);
                 break;
+            case ClientGUI.FILE_UNITS_REINFORCE_RAT:
+                if (randomArmyDialog == null) {
+                    randomArmyDialog = new MMMainMenuRandomArmyDialog(frame);
+                }
+                randomArmyDialog.setVisible(true);
+                break;
         }
     };
+
+    private void showNetworkInformation() {
+        // Display the network information screen
+        getNetworkInformationDialog().refresh();
+        getNetworkInformationDialog().pack();
+        getNetworkInformationDialog().setVisible(true);
+    }
+
+    public NetworkInformationDialog getNetworkInformationDialog() {
+        if (networkInformationDialog == null) {
+            networkInformationDialog = new NetworkInformationDialog(this.frame);
+        }
+        return networkInformationDialog;
+    }
 
     @Override
     public void preferenceChange(PreferenceChangeEvent evt) {
@@ -1347,7 +1375,7 @@ public class MegaMekGUI implements IPreferenceChangeListener {
         }
     }
 
-    private @Nullable Image getImage(final String filename, final int screenWidth, final int screenHeight) {
+    private @Nullable Image getImage(final String filename) {
         File file = new MegaMekFile(Configuration.widgetsDir(), filename).getFile();
         if (!file.exists()) {
             LOGGER.error("MainMenu Error: Image doesn't exist: {}", file.getAbsolutePath());
