@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2003-2005 - Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2003-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2003-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -260,8 +260,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
           "CommonSettingsDialog.defaultAutoejectDisabled"));
     private final JCheckBox useAverageSkills =
           new JCheckBox(Messages.getString("CommonSettingsDialog.useAverageSkills"));
-    private final JCheckBox useGPinUnitSelection = new JCheckBox(Messages.getString(
-          "CommonSettingsDialog.useGPinUnitSelection"));
     private final JCheckBox generateNames = new JCheckBox(Messages.getString("CommonSettingsDialog.generateNames"));
     private final JCheckBox showUnitId = new JCheckBox(Messages.getString("CommonSettingsDialog.showUnitId"));
     private final JCheckBox showAutoResolvePanel = new JCheckBox(Messages.getString(
@@ -270,8 +268,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     private JComboBox<String> displayLocale;
     private final JCheckBox showIPAddressesInChat = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.showIPAddressesInChat"));
-    private final JCheckBox startSearchlightsOn = new JCheckBox(Messages.getString(
-          "CommonSettingsDialog.startSearchlightsOn"));
     private final JCheckBox spritesOnly = new JCheckBox(Messages.getString(
           "CommonSettingsDialog.spritesOnly"));
     private final JCheckBox showDamageLevel = new JCheckBox(Messages.getString("CommonSettingsDialog.showDamageLevel"));
@@ -342,6 +338,9 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     private ColourSelectorButton csbUnitTextColor;
     private ColourSelectorButton csbBuildingTextColor;
     private ColourSelectorButton csbLowFoliageColor;
+    private ColourSelectorButton csbDemolitionChargeColor;
+    private final JCheckBox demolitionChargeHazardOutline = new JCheckBox(
+          Messages.getString("CommonSettingsDialog.demolitionChargeHazardOutline"));
     private ColourSelectorButton csbBoardTextColor;
     private ColourSelectorButton csbBoardSpaceTextColor;
     private ColourSelectorButton csbMapSheetColor;
@@ -864,7 +863,14 @@ public class CommonSettingsDialog extends AbstractButtonDialog
               new ColourSelectorButton(Messages.getString("CommonSettingsDialog.colors.LowFoliageColor"));
         csbLowFoliageColor.setColour(GUIP.getLowFoliageColor());
         row.add(csbLowFoliageColor);
+
+        csbDemolitionChargeColor = new ColourSelectorButton(Messages.getString(
+              "CommonSettingsDialog.colors.DemolitionChargeColor"));
+        csbDemolitionChargeColor.setColour(GUIP.getDemolitionChargeColor());
+        row.add(csbDemolitionChargeColor);
         comps.add(row);
+
+        comps.add(checkboxEntry(demolitionChargeHazardOutline, null));
 
         addLineSpacer(comps);
 
@@ -2146,8 +2152,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         comps.add(checkboxEntry(defaultAutoEjectDisabled, null));
         comps.add(checkboxEntry(useAverageSkills, null));
-        comps.add(checkboxEntry(useGPinUnitSelection,
-              "This changes the BV/PV displayed in the unit selection list. It does not change the pilot/gunnery of the mek once selected. Request restart of Megamek."));
         comps.add(checkboxEntry(generateNames, null));
 
         addLineSpacer(comps);
@@ -2188,8 +2192,6 @@ public class CommonSettingsDialog extends AbstractButtonDialog
 
         comps.add(checkboxEntry(showIPAddressesInChat,
               Messages.getString("CommonSettingsDialog.showIPAddressesInChat.tooltip")));
-        comps.add(checkboxEntry(startSearchlightsOn,
-              Messages.getString("CommonSettingsDialog.startSearchlightsOn.tooltip")));
         comps.add(checkboxEntry(spritesOnly,
               Messages.getString("CommonSettingsDialog.spritesOnly.tooltip")));
         return createSettingsPanel(comps);
@@ -2299,12 +2301,10 @@ public class CommonSettingsDialog extends AbstractButtonDialog
             reportKeywordsTextPane.setText(CLIENT_PREFERENCES.getReportKeywords());
             reportFilterKeywordsTextPane.setText(CLIENT_PREFERENCES.getReportFilterKeywords());
             showIPAddressesInChat.setSelected(CLIENT_PREFERENCES.getShowIPAddressesInChat());
-            startSearchlightsOn.setSelected(CLIENT_PREFERENCES.getStartSearchlightsOn());
             spritesOnly.setSelected(CLIENT_PREFERENCES.getSpritesOnly());
 
             defaultAutoEjectDisabled.setSelected(CLIENT_PREFERENCES.defaultAutoEjectDisabled());
             useAverageSkills.setSelected(CLIENT_PREFERENCES.useAverageSkills());
-            useGPinUnitSelection.setSelected(CLIENT_PREFERENCES.useGPinUnitSelection());
             generateNames.setSelected(CLIENT_PREFERENCES.generateNames());
             showUnitId.setSelected(CLIENT_PREFERENCES.getShowUnitId());
             showAutoResolvePanel.setSelected(CLIENT_PREFERENCES.getShowAutoResolvePanel());
@@ -2528,6 +2528,8 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         csbBoardTextColor.setColour(GUIP.getBoardTextColor());
         csbBoardSpaceTextColor.setColour(GUIP.getBoardSpaceTextColor());
         csbLowFoliageColor.setColour(GUIP.getLowFoliageColor());
+        csbDemolitionChargeColor.setColour(GUIP.getDemolitionChargeColor());
+        demolitionChargeHazardOutline.setSelected(GUIP.getDemolitionChargeHazardOutline());
         csbMapSheetColor.setColour(GUIP.getMapsheetColor());
 
         attackArrowTransparency.setValue(GUIP.getAttackArrowTransparency());
@@ -2727,6 +2729,8 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         GUIP.setBoardTextColor(csbBoardTextColor.getColour());
         GUIP.setBoardSpaceTextColor(csbBoardSpaceTextColor.getColour());
         GUIP.setLowFoliageColor(csbLowFoliageColor.getColour());
+        GUIP.setDemolitionChargeColor(csbDemolitionChargeColor.getColour());
+        GUIP.setDemolitionChargeHazardOutline(demolitionChargeHazardOutline.isSelected());
         GUIP.setMapSheetColor(csbMapSheetColor.getColour());
 
         GUIP.setAttackArrowTransparency((Integer) attackArrowTransparency.getValue());
@@ -2794,12 +2798,10 @@ public class CommonSettingsDialog extends AbstractButtonDialog
         CLIENT_PREFERENCES.setReportKeywords(reportKeywordsTextPane.getText());
         CLIENT_PREFERENCES.setReportFilterKeywords(reportFilterKeywordsTextPane.getText());
         CLIENT_PREFERENCES.setShowIPAddressesInChat(showIPAddressesInChat.isSelected());
-        CLIENT_PREFERENCES.setStartSearchlightsOn(startSearchlightsOn.isSelected());
         CLIENT_PREFERENCES.setSpritesOnly(spritesOnly.isSelected());
         CLIENT_PREFERENCES.setEnableExperimentalBotFeatures(enableExperimentalBotFeatures.isSelected());
         CLIENT_PREFERENCES.setDefaultAutoEjectDisabled(defaultAutoEjectDisabled.isSelected());
         CLIENT_PREFERENCES.setUseAverageSkills(useAverageSkills.isSelected());
-        CLIENT_PREFERENCES.setUseGpInUnitSelection(useGPinUnitSelection.isSelected());
         CLIENT_PREFERENCES.setGenerateNames(generateNames.isSelected());
         CLIENT_PREFERENCES.setShowUnitId(showUnitId.isSelected());
         CLIENT_PREFERENCES.setShowAutoResolvePanel(showAutoResolvePanel.isSelected());
@@ -3850,9 +3852,9 @@ public class CommonSettingsDialog extends AbstractButtonDialog
     @Override
     public void stateChanged(ChangeEvent evt) {
         if (evt.getSource().equals(fovHighlightAlpha)) {
-            GUIP.setFovHighlightAlpha(Math.max(0, Math.min(255, fovHighlightAlpha.getValue())));
+            GUIP.setFovHighlightAlpha(Math.clamp(fovHighlightAlpha.getValue(), 0, 255));
         } else if (evt.getSource().equals(fovDarkenAlpha)) {
-            GUIP.setFovDarkenAlpha(Math.max(0, Math.min(255, fovDarkenAlpha.getValue())));
+            GUIP.setFovDarkenAlpha(Math.clamp(fovDarkenAlpha.getValue(), 0, 255));
         } else if (evt.getSource().equals(numStripesSlider)) {
             GUIP.setFovStripes(numStripesSlider.getValue());
         } else if (evt.getSource().equals(traceOverlayTransparencySlider)) {
