@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2000-2005 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2025-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -49,8 +49,11 @@ import megamek.common.HexTarget;
 import megamek.common.IndustrialElevator;
 import megamek.common.LosEffects;
 import megamek.common.ManeuverType;
+import megamek.common.annotations.Nullable;
 import megamek.common.battleArmor.BattleArmor;
+import megamek.common.board.Board;
 import megamek.common.board.BoardLocation;
+import megamek.common.board.BridgeConstruction;
 import megamek.common.board.Coords;
 import megamek.common.board.FloorTarget;
 import megamek.common.compute.Compute;
@@ -91,6 +94,15 @@ public class MoveStep implements Serializable {
      */
     public static final int CARGO_LOCATION_KEY = 1;
 
+    /**
+     * Additional int data keys for a BUILD_BRIDGE step (keys are scoped per step type): the target hex coordinates, the
+     * exits bitmask of the two connected hexsides, and the bridge type (light/medium).
+     */
+    public static final int BRIDGE_TARGET_X_KEY = 0;
+    public static final int BRIDGE_TARGET_Y_KEY = 1;
+    public static final int BRIDGE_EXITS_KEY = 2;
+    public static final int BRIDGE_TYPE_KEY = 3;
+
     private final MoveStepType type;
     private int targetId = Entity.NONE;
     private int targetType = Targetable.TYPE_ENTITY;
@@ -113,6 +125,9 @@ public class MoveStep implements Serializable {
     private int altitude = -999;
 
     private int mineToLay = -1;
+
+    /** Distance for Combat Vehicle Escape Pod launch (0-4 hexes per TO:AUE p.121) */
+    private int escapePodDistance = 4;
 
     /**
      * This step's static movement type. Additional steps in the path will not change this value.
@@ -148,6 +163,11 @@ public class MoveStep implements Serializable {
     private boolean isRunProhibited = false;
     private boolean isStackingViolation = false;
     private boolean isDiggingIn = false;
+    private boolean isHittingDeck = false;
+    private boolean isClearingRubble = false;
+    private boolean isClimbing = false;
+    private int climbingTotalLevels = 0;
+    private int climbingChargedLevels = 0;
     private boolean isTakingCover = false;
     private int wigeBonus = 0;
     private int nWigeDescent = 0;
@@ -308,6 +328,8 @@ public class MoveStep implements Serializable {
             this.additionalData.put(CARGO_PICKUP_KEY, additionalIntData);
         } else if (type == MoveStepType.DROP_CARGO) {
             this.additionalData.put(CARGO_LOCATION_KEY, additionalIntData);
+        } else if (type == MoveStepType.LAUNCH_ESCAPE_POD) {
+            this.escapePodDistance = additionalIntData;
         }
     }
 
@@ -367,11 +389,30 @@ public class MoveStep implements Serializable {
         this.mf = mf;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static MoveStep createChangeBoardMoveStep(MovePath path, Coords finalPosition, int finalBoardId) {
         MoveStep newStep = new MoveStep(path, MoveStepType.CHANGE_BOARD);
         newStep.boardId = finalBoardId;
         newStep.position = finalPosition;
         return newStep;
+    }
+
+    /**
+     * Determines whether a hex allows digging in or building a fortified hex. Water, pavement, building and road hexes
+     * are excluded, as is an already-fortified hex (TO:AR p.106 / TO:AUE p.153). Shared by the move-step legality check
+     * and the UI so both agree on the terrain rule.
+     *
+     * @param hex the hex to test, or null
+     *
+     * @return {@code true} if a unit may dig in or fortify in the given hex
+     */
+    public static boolean isFortifiableTerrain(@Nullable Hex hex) {
+        return (hex != null)
+              && !hex.containsTerrain(Terrains.WATER)
+              && !hex.containsTerrain(Terrains.PAVEMENT)
+              && !hex.containsTerrain(Terrains.FORTIFIED)
+              && !hex.containsTerrain(Terrains.BUILDING)
+              && !hex.containsTerrain(Terrains.ROAD);
     }
 
     @Override
@@ -572,7 +613,7 @@ public class MoveStep implements Serializable {
             if ((entity instanceof Infantry) && !grdDropship) {
                 // infantry can jump into a building
                 // Maybe this line is a bit too much, but it seems to work by coincidence
-                setElevation(Math.max(depth, Math.min(building, maxElevation)));
+                setElevation(Math.clamp(building, depth, maxElevation));
             } else {
                 int subDepth = Math.max(depth, building);
 
@@ -619,12 +660,24 @@ public class MoveStep implements Serializable {
                         // if the wall is taller than the unit then they cannot climb it or enter it
                         return;
                     }
+                } else if (isClimbing) {
+                    // Continuation climb into a hex with a building — Mek lands on the top
+                    // climbable surface (building roof / bridge / bare hex level). Goes through
+                    // ClimbingHelper rather than entity.calcElevation so the water-emergence
+                    // adjustment doesn't fire when the Mek is clinging on a cliff face above
+                    // the waterline (the dest hex's own water/no-water state is what matters).
+                    setElevation(ClimbingHelper.getClimbDestinationElevation(hex));
                 } else {
                     setElevation(entity.calcElevation(game.getBoard(boardId).getHex(prev.getPosition()),
                           game.getBoard(boardId).getHex(getPosition()),
                           elevation,
                           climbMode()));
                 }
+            } else if (isClimbing) {
+                // Same as above for the no-building case. A Mek climbing onto a plain higher
+                // hex (bare cliff top) lands at the destination's hex level — relative elev 0.
+                Hex curHex = game.getBoard(boardId).getHex(getPosition());
+                setElevation(ClimbingHelper.getClimbDestinationElevation(curHex));
             } else {
                 setElevation(entity.calcElevation(game.getBoard(boardId).getHex(prev.getPosition()),
                       game.getBoard(boardId).getHex(getPosition()),
@@ -742,6 +795,30 @@ public class MoveStep implements Serializable {
     }
 
     /**
+     * A vehicle that is hull-down in a fortified ("infantry-built") hex cannot change facing while remaining in the
+     * hex; per TO:AR p.19 it must exit, turn, then re-enter. An in-place facing change therefore forfeits the hull-down
+     * cover. Meks use the partial-cover hull-down rules and are unaffected.
+     *
+     * @param game   the current {@link Game}
+     * @param entity the moving entity
+     *
+     * @return true if this step is an in-place facing change that should drop the entity's hull-down state
+     */
+    private boolean losesHullDownToInPlaceTurn(final Game game, final Entity entity) {
+        boolean isTurnStep = (type == MoveStepType.TURN_LEFT) || (type == MoveStepType.TURN_RIGHT);
+        if (!isTurnStep || !isHullDown()) {
+            return false;
+        }
+        boolean isVehicleHullDown = (entity instanceof Tank)
+              || ((entity instanceof QuadVee) && (entity.getConversionMode() == QuadVee.CONV_MODE_VEHICLE));
+        if (!isVehicleHullDown) {
+            return false;
+        }
+        Hex currentHex = game.getBoard(boardId).getHex(getPosition());
+        return (currentHex != null) && currentHex.containsTerrain(Terrains.FORTIFIED);
+    }
+
+    /**
      * Compile the static move data for this step.
      *
      * @param game   The current {@link Game}
@@ -766,11 +843,16 @@ public class MoveStep implements Serializable {
             movementMode = prev.getMovementMode();
         }
 
-        // Tanks can just drive out of hull-down. If we're a tank, and we moved
-        // then we are no longer hull-down.
+        // Tanks can just drive out of hull-down: if a vehicle moved, it is no longer hull-down. A vehicle that is
+        // hull-down in a fortified ("infantry-built") hex also forfeits cover when it changes facing in place,
+        // since RAW requires it to exit, turn, then re-enter rather than turning within the hex (TO:AR p.19).
         if ((entity instanceof Tank ||
               (entity instanceof QuadVee && entity.getConversionMode() == QuadVee.CONV_MODE_VEHICLE)) &&
               (distance > 0)) {
+            setHullDown(false);
+        } else if (losesHullDownToInPlaceTurn(game, entity)) {
+            LOGGER.debug("[HullDown] {}: hull-down lost - a vehicle cannot change facing within a fortified hex; "
+                  + "it must exit, turn, then re-enter (TO:AR p.19)", entity.getDisplayName());
             setHullDown(false);
         }
 
@@ -791,6 +873,14 @@ public class MoveStep implements Serializable {
 
         // set moveType, illegal, trouble flags
         compileIllegal(game, entity, prev, cachedEntityState);
+
+        if (isClimbing) {
+            LOGGER.debug("[CLIMB-TRACE] compile FINAL: type={}, movementType={}, mp={}, mpUsed={}, " +
+                        "elevation={}, position={}, isClimbing={}, isStackingViolation={}, terrainInvalid={}, " +
+                        "isLegalEndPos={}",
+                  type, movementType, mp, mpUsed, elevation, position,
+                  isClimbing, isStackingViolation, terrainInvalid, isLegalEndPos());
+        }
     }
 
     /**
@@ -813,8 +903,7 @@ public class MoveStep implements Serializable {
 
         } else if (prev.isFirstStep()
               && prev.isTurning
-              && entity instanceof Infantry infantry
-              && !entity.isBattleArmor()
+              && entity instanceof ConvInfantry infantry
               && !infantry.hasActiveFieldArtillery()) {
             // For CI, turning is only a graphical distinction unless they are field artillery
             setFirstStep();
@@ -877,6 +966,7 @@ public class MoveStep implements Serializable {
         isHullDown = prev.isHullDown;
         climbMode = prev.climbMode;
         isRunProhibited = prev.isRunProhibited;
+        isClimbing = prev.isClimbing;
         hasEverUnloaded = prev.hasEverUnloaded;
         elevation = prev.elevation;
         altitude = prev.altitude;
@@ -915,6 +1005,7 @@ public class MoveStep implements Serializable {
         isFlying = entity.isAirborne() || entity.isAirborneVTOLorWIGE();
         isHullDown = entity.isHullDown();
         climbMode = entity.climbMode();
+        isClimbing = entity.isClimbing();
         thisStepBackwards = entity.inReverse;
 
         // Moving in reverse prohibits running
@@ -926,6 +1017,10 @@ public class MoveStep implements Serializable {
         altitude = entity.getAltitude();
         movementType = entity.moved;
         movementMode = entity.getMovementMode();
+        if (isClimbing) {
+            LOGGER.debug("setFromEntity: climbing entity {} at elevation={}, position={}, isClimbing={}",
+                  entity.getDisplayName(), elevation, position, isClimbing);
+        }
 
         isRolled = false;
         freeTurn = false;
@@ -1096,6 +1191,30 @@ public class MoveStep implements Serializable {
         return climbMode;
     }
 
+    public boolean isClimbing() {
+        return isClimbing;
+    }
+
+    public void setIsClimbing(boolean climbing) {
+        this.isClimbing = climbing;
+    }
+
+    /**
+     * Returns the total remaining levels for this climbing step, used for turn count display.
+     */
+    public int getClimbingTotalLevels() {
+        return climbingTotalLevels;
+    }
+
+    /**
+     * Returns the number of climbing levels actually charged this turn (the player's chosen count, capped at the full
+     * delta). Differs from {@link #getClimbingTotalLevels()} when the player picked a partial climb. Used by the
+     * turn-count display to compute non-climbing MP correctly without going negative.
+     */
+    public int getClimbingChargedLevels() {
+        return climbingChargedLevels;
+    }
+
     public boolean isTurning() {
         return isTurning;
     }
@@ -1164,6 +1283,13 @@ public class MoveStep implements Serializable {
         // If this step's position is the end of the path, and it is not a valid end position, then the movement type
         // is "illegal".
         if (isLastStep && !isLegalEndPos()) {
+            if (isClimbing) {
+                LOGGER.debug("[CLIMB-TRACE] getMovementType: isLastStep={}, isLegalEndPos=false, " +
+                            "overriding {} to MOVE_ILLEGAL, isStackingViolation={}, terrainInvalid={}, " +
+                            "isJumping={}, distance={}, hasEverUnloaded={}, position={}, elevation={}",
+                      isLastStep, movementType, isStackingViolation, terrainInvalid,
+                      isJumping(), distance, hasEverUnloaded, position, elevation);
+            }
             moveType = EntityMovementType.MOVE_ILLEGAL;
         }
         return moveType;
@@ -1191,9 +1317,17 @@ public class MoveStep implements Serializable {
         // Can't be a stacking violation.
         boolean legal = true;
         if (isStackingViolation) {
+            if (isClimbing) {
+                LOGGER.debug("[CLIMB-TRACE] isLegalEndPos: BLOCKED by stacking violation, pos={}", position);
+            }
             legal = false;
         } else if (terrainInvalid) {
             // Can't be into invalid terrain.
+            if (isClimbing) {
+                LOGGER.debug("[CLIMB-TRACE] isLegalEndPos: BLOCKED by terrainInvalid, pos={}, elevation={}",
+                      position,
+                      elevation);
+            }
             legal = false;
         } else if (isJumping() && (distance == 0)) {
             // Can't jump zero hexes.
@@ -1480,6 +1614,95 @@ public class MoveStep implements Serializable {
     }
 
     /**
+     * @param game   the current game
+     * @param entity the moving entity
+     * @param curPos the position of the entity when this step begins, or null if unknown
+     *
+     * @return {@code true} if this BUILD_BRIDGE step is legal: the Bridge-Building Engineers game option is active, the
+     *       unit is an engineer platoon with its bridge kit and enough remaining budget for the chosen bridge type, and
+     *       the step's target hex is adjacent and a valid bridge site. TO:AUE p.152.
+     */
+    private boolean isValidBridgeBuildStep(Game game, Entity entity, @Nullable Coords curPos) {
+        // Failures are logged at DEBUG: a rejected BUILD_BRIDGE step silently becomes an illegal move, so the log
+        // is the only way to see why a declared build was refused
+        if (!game.getOptions().booleanOption(OptionsConstants.ADVANCED_BRIDGE_BUILDING_ENGINEERS)) {
+            LOGGER.debug("[BuildBridge] step rejected: game option is off");
+            return false;
+        }
+        if (!(entity instanceof ConvInfantry convInfantry) || !convInfantry.canStartBridgeBuild()
+              || !convInfantry.canAffordBridge(getBridgeType())) {
+            LOGGER.debug("[BuildBridge] step rejected for {}: not an eligible engineer platoon "
+                  + "(specialization, kit, budget or an active build)", entity.getShortName());
+            return false;
+        }
+        Coords target = getBridgeTargetCoords();
+        if ((target == null) || (curPos == null) || (curPos.distance(target) != 1)) {
+            LOGGER.debug("[BuildBridge] step rejected for {}: target {} is not adjacent to {}",
+                  entity.getShortName(), target, curPos);
+            return false;
+        }
+        Board board = game.getBoard(boardId);
+        int exits = getBridgeExits();
+        boolean isFreshSite = BridgeConstruction.isValidBridgeSite(board, target, exits);
+        // Repairing a destroyed section is an unofficial option that also requires the base bridge-building option
+        // (already checked above). A repairable gap is a legal build target even though it is not a fresh site.
+        boolean repairAllowed = game.getOptions().booleanOption(OptionsConstants.UNOFFICIAL_BRIDGE_REPAIR_ENGINEERS);
+        boolean isRepairSite = repairAllowed && BridgeConstruction.isBridgeRepairSite(board, target, exits);
+        if (!isFreshSite && !isRepairSite) {
+            LOGGER.debug("[BuildBridge] step rejected for {}: {} with exits bitmask {} is neither a valid bridge site "
+                        + "nor a repairable gap (repair option {})", entity.getShortName(), target, exits,
+                  repairAllowed ? "on" : "off");
+            return false;
+        }
+        return true;
+    }
+
+    /**
+     * @param hex              the hex to check, or null (returns {@code false})
+     * @param assumedElevation the elevation of the unit in that hex
+     *
+     * @return {@code true} if a unit at the given elevation in the given hex stands on top of a bridge deck. Such a
+     *       unit is on the bridge, not in the terrain below it, so the underlying terrain's movement restrictions do
+     *       not apply to it (TO:AR p.115).
+     */
+    private static boolean isOnBridgeDeck(@Nullable Hex hex, int assumedElevation) {
+        return (hex != null) && hex.containsTerrain(Terrains.BRIDGE)
+              && (assumedElevation == hex.terrainLevel(Terrains.BRIDGE_ELEV));
+    }
+
+    /**
+     * @param hex the hex to check, or null
+     *
+     * @return {@code true} if the hex holds a bridge that a ground unit must use the bridge to cross - one over water,
+     *       or one whose deck is raised above the hex. A bridge flush with dry ground acts as a road and is not
+     *       constrained to its exits, so it returns {@code false}.
+     */
+    private static boolean isRealBridgeSpan(@Nullable Hex hex) {
+        return (hex != null) && hex.containsTerrain(Terrains.BRIDGE)
+              && ((hex.terrainLevel(Terrains.WATER) > 0) || (hex.terrainLevel(Terrains.BRIDGE_ELEV) > 0));
+    }
+
+    /**
+     * @param entity    the moving entity
+     * @param bridgeHex the bridge hex being entered or left, or null
+     * @param elevation the entity's elevation in {@code bridgeHex}
+     * @param hexPos    the coordinates of {@code bridgeHex}
+     * @param otherPos  the hex the entity is moving to or from across the bridge edge
+     *
+     * @return {@code true} if the entity would cross the edge between {@code hexPos} and {@code otherPos} while
+     *       standing on a real bridge deck it must use (one over water or raised above the hex) at a hexside that is
+     *       not one of the bridge's exits - i.e. boarding or leaving the bridge over its side rather than at an end
+     *       (TO:AR p.115). A unit that could traverse the terrain under the bridge is not bound to its exits.
+     */
+    private boolean crossesBridgeDeckOffExit(Entity entity, @Nullable Hex bridgeHex, int elevation, Coords hexPos,
+          Coords otherPos) {
+        return isRealBridgeSpan(bridgeHex)
+              && (elevation == bridgeHex.terrainLevel(Terrains.BRIDGE_ELEV))
+              && entity.isLocationProhibited(hexPos, boardId, elevation)
+              && !bridgeHex.containsTerrainExit(Terrains.BRIDGE, hexPos.direction(otherPos));
+    }
+
+    /**
      * This function checks that a step is legal. And adjust the movement type. This only checks for things that can
      * make this step by itself illegal. Things that can make a step illegal as part of a movement path are considered
      * in MovePath.addStep.
@@ -1626,6 +1849,14 @@ public class MoveStep implements Serializable {
                 return;
             }
 
+            // aerodynes cannot fly backwards in atmosphere
+            if (useAeroAtmosphere(game, entity) &&
+                  ((type == MoveStepType.BACKWARDS) ||
+                        (type == MoveStepType.LATERAL_LEFT_BACKWARDS) ||
+                        (type == MoveStepType.LATERAL_RIGHT_BACKWARDS))) {
+                return;
+            }
+
             // spheroids in atmosphere can move a max of 1 hex on the low atmosphere map and 8 hexes on the ground
             // map, regardless of any other considerations unless they're out of control, in which case, well...
             if (useSpheroidAtmosphere(game, entity) &&
@@ -1725,7 +1956,8 @@ public class MoveStep implements Serializable {
         } // end AERO stuff
 
         if (isInfantry && isJumping() && stepType == MoveStepType.DOWN) {
-            if (game.getBoard(boardId).getHex(curPos).containsTerrain(Terrains.BUILDING)) {
+            Hex curHex = game.getBoard(boardId).getHex(curPos);
+            if (curHex.containsTerrain(Terrains.BUILDING)) {
                 Coords startingPosition = entity.getPosition();
                 Coords adjacentCoords = curPos.translated(curPos.direction(startingPosition));
                 Hex adjacentHex = game.getHex(adjacentCoords, boardId);
@@ -1734,7 +1966,7 @@ public class MoveStep implements Serializable {
                       entity,
                       new FloorTarget(curPos, game.getBoard(boardId), getElevation())).canSee();
 
-                if (adjacentHex.ceiling() >= getElevation() || !hasLOS) {
+                if (adjacentHex.ceiling() >= getElevation() + curHex.getLevel() || !hasLOS) {
                     return; // can't enter the building from this direction
                 } else {
                     // we can enter the building, but we need to roll anti-mek skill
@@ -1743,33 +1975,146 @@ public class MoveStep implements Serializable {
             }
         }
 
-        if (prev.isDiggingIn) {
-            isDiggingIn = true;
+        // A climbing unit inherits the climbing state from the previous step.
+        // A climbing unit cannot turn - it must face the cliff/building (TO:AR p.20).
+        // Only FORWARDS (to continue climbing) and CLIMB_MODE_ON/OFF are allowed.
+        if (prev.isClimbing) {
+            isClimbing = true;
+            if ((stepType != MoveStepType.FORWARDS)
+                  && (stepType != MoveStepType.CLIMB_MODE_ON)
+                  && (stepType != MoveStepType.CLIMB_MODE_OFF)
+                  && (stepType != MoveStepType.DOWN)) {
+                LOGGER.debug("[CLIMB-TRACE] Blocked step type {} while climbing - set MOVE_ILLEGAL", stepType);
+                movementType = EntityMovementType.MOVE_ILLEGAL;
+                return;
+            }
+            LOGGER.debug("[CLIMB-TRACE] Allowed step type {} while climbing", stepType);
+        }
+
+        // Log all facing changes for debugging
+        if ((stepType == MoveStepType.TURN_LEFT) || (stepType == MoveStepType.TURN_RIGHT)) {
+            LOGGER.debug("[FACING-TRACE] Facing change: type={}, prev.isClimbing={}, " +
+                        "entity.isClimbing={}, position={}, elevation={}, prev.facing={}",
+                  stepType, prev.isClimbing, entity.isClimbing(), curPos, elevation, prev.getFacing());
+        }
+
+        // A platoon actively raising or dismantling a bridge may take no other action at all (TO:AUE p.152): it can
+        // only keep working (no step) or declare one of the bridge actions (pause/cancel/abandon/resume) - it may not
+        // move, and not even turn in place. A *paused* build does not lock the platoon: it is freed to move and fight.
+        if ((entity instanceof ConvInfantry bridgeWorker) && bridgeWorker.isBusyWithBridge()
+              && (type != MoveStepType.CANCEL_BRIDGE) && (type != MoveStepType.RESUME_BRIDGE)
+              && (type != MoveStepType.PAUSE_BRIDGE) && (type != MoveStepType.ABANDON_BRIDGE)) {
+            movementType = EntityMovementType.MOVE_ILLEGAL;
+            return;
+        }
+
+        if (prev.isDiggingIn || prev.isHittingDeck || prev.isClearingRubble) {
+            isDiggingIn = prev.isDiggingIn;
+            isHittingDeck = prev.isHittingDeck;
+            isClearingRubble = prev.isClearingRubble;
             if ((type != MoveStepType.TURN_LEFT) && (type != MoveStepType.TURN_RIGHT)) {
-                return; // can't move when digging in
+                return; // can't move when digging in, hitting the deck or clearing rubble
             }
             movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.CLEAR_RUBBLE) {
+            // Clearing rubble with a bulldozer must be the vehicle's sole action; it remains in the hex but may still
+            // change facing (TacOps). The vehicle drives into the rubble hex and then clears it, so this is the final
+            // step of the move (after any movement into the hex), not necessarily the first step.
+            String illegalReason = BulldozerRules.clearRubbleIllegalReason(entity,
+                  game.getBoard(boardId).getHex(curPos), game);
+            if (illegalReason != null) {
+                LOGGER.debug("[Bulldozer] {}: {} (at {})", entity.getDisplayName(), illegalReason, curPos);
+                return;
+            }
+            LOGGER.debug("[Bulldozer] {}: clear rubble step accepted at {}", entity.getDisplayName(), curPos);
+            isClearingRubble = true;
+            movementType = EntityMovementType.MOVE_NONE;
         } else if ((type == MoveStepType.DIG_IN) || (type == MoveStepType.FORTIFY)) {
-            if ((!isInfantry && !isTank) || !isFirstStep()) {
+            // Meks may build a fortified hex (FORTIFY) with fieldworks equipment (Vehicles and Fieldworks,
+            // TO:AUE p.153, Corrected Sixth Printing) but cannot dig foxholes (DIG_IN); infantry and vehicles
+            // may do both.
+            boolean isMekFortify = (type == MoveStepType.FORTIFY) && (entity instanceof Mek);
+            if ((!isInfantry && !isTank && !isMekFortify) || !isFirstStep()) {
+                LOGGER.debug("[Fortify] {}: {} illegal - only infantry, vehicles, or fieldworks-capable Meks, and "
+                      + "only as the first/sole action", entity.getDisplayName(), type);
                 return; // can't dig in
+            }
+
+            // Building a fortified hex (FORTIFY) requires fieldworks-capable equipment - bulldozer, backhoe,
+            // vibro-shovel or equivalent (TO:AUE p.153). Plain self digging-in (DIG_IN) does not.
+            if ((type == MoveStepType.FORTIFY) && !entity.hasWorkingMisc(MiscType.F_TRENCH_CAPABLE)) {
+                LOGGER.debug("[Fortify] {}: fortify illegal - no fieldworks-capable equipment (F_TRENCH_CAPABLE)",
+                      entity.getDisplayName());
+                return;
             }
 
             if (isInfantry) {
                 Infantry inf = (Infantry) entity;
                 if ((inf.getDugIn() != Infantry.DUG_IN_NONE) && (inf.getDugIn() != Infantry.DUG_IN_COMPLETE)) {
+                    LOGGER.debug("[Fortify] {}: {} illegal - already dug in (stage {})",
+                          entity.getDisplayName(), type, inf.getDugIn());
                     return; // Already dug in
                 }
             }
 
-            if (game.getBoard(boardId).getHex(curPos).containsTerrain(Terrains.PAVEMENT) ||
-                  game.getBoard(boardId).getHex(curPos).containsTerrain(Terrains.FORTIFIED) ||
-                  game.getBoard(boardId).getHex(curPos).containsTerrain(Terrains.BUILDING) ||
-                  game.getBoard(boardId).getHex(curPos).containsTerrain(Terrains.ROAD)) {
-                // already fortified - pointless, or terrain is illegal for
-                // digging in
+            // A fortified hex may not be created in - and a unit may not dig into - water, pavement, building
+            // or road hexes (TO:AR p.106 / TO:AUE p.153). An already-fortified hex is excluded too (no gain).
+            if (!isFortifiableTerrain(game.getBoard(boardId).getHex(curPos))) {
+                LOGGER.debug(
+                      "[Fortify] {}: {} illegal - terrain at {} is water/pavement/building/road or already fortified",
+                      entity.getDisplayName(),
+                      type,
+                      curPos);
                 return;
             }
             isDiggingIn = true;
+            movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.BUILD_BRIDGE) {
+            // Raising a bridge must be the platoon's only action for the turn, TO:AUE p.152
+            if (!isFirstStep() || !isValidBridgeBuildStep(game, entity, curPos)) {
+                return;
+            }
+            movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.CANCEL_BRIDGE) {
+            // A platoon may dismantle its in-progress bridge for a refund; legal only while actively building.
+            if (!isFirstStep() || !(entity instanceof ConvInfantry convInfantry) || !convInfantry.isBuildingBridge()) {
+                return;
+            }
+            movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.PAUSE_BRIDGE) {
+            // A platoon may pause an active build to free itself and return later; legal only while actively building.
+            if (!isFirstStep() || !(entity instanceof ConvInfantry convInfantry) || !convInfantry.isBuildingBridge()) {
+                return;
+            }
+            movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.RESUME_BRIDGE) {
+            // A platoon may reverse a dismantling, or resume a paused build (must be back adjacent to its site).
+            if (!isFirstStep() || !(entity instanceof ConvInfantry convInfantry)) {
+                return;
+            }
+            boolean canResume = convInfantry.isDismantlingBridge()
+                  || (convInfantry.isBridgePaused() && convInfantry.isAdjacentToBridgeSite());
+            if (!canResume) {
+                return;
+            }
+            movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.ABANDON_BRIDGE) {
+            // A platoon may abandon any bridge work in progress (building, paused, or dismantling) - instant, no refund.
+            if (!isFirstStep() || !(entity instanceof ConvInfantry convInfantry)
+                  || !convInfantry.hasBridgeInProgress()) {
+                return;
+            }
+            movementType = EntityMovementType.MOVE_NONE;
+        } else if (type == MoveStepType.HIT_THE_DECK) {
+            // Hitting the deck (TO:AR p.106) may only be the unit's sole action and is allowed in any terrain.
+            if (!isInfantry || !isFirstStep()) {
+                return; // only infantry can hit the deck, and only as their first/only action
+            }
+            Infantry infantry = (Infantry) entity;
+            if (infantry.isHitTheDeck() || (infantry.getDugIn() != Infantry.DUG_IN_NONE)) {
+                return; // can't hit the deck while already on the deck or dug in (two postures at once)
+            }
+            isHittingDeck = true;
             movementType = EntityMovementType.MOVE_NONE;
         }
 
@@ -1826,6 +2171,14 @@ public class MoveStep implements Serializable {
         }
         // check for ejection (always legal?)
         if (type == MoveStepType.EJECT) {
+            movementType = EntityMovementType.MOVE_NONE;
+        }
+        // Combat Vehicle Escape Pod launch (TO:AUE p.121)
+        if (type == MoveStepType.LAUNCH_ESCAPE_POD) {
+            movementType = EntityMovementType.MOVE_NONE;
+        }
+        // Unit abandonment (TacOps:AR p.165)
+        if (type == MoveStepType.ABANDON) {
             movementType = EntityMovementType.MOVE_NONE;
         }
         if (type == MoveStepType.SEARCHLIGHT) {
@@ -2009,6 +2362,7 @@ public class MoveStep implements Serializable {
             tmpWalkMP = entity.getActiveUMUCount();
         }
 
+        // VTOLs use jump MP when airborne (includes powered flight infantry whose getMovementMode() returns VTOL)
         if ((getEntity().getMovementMode() == EntityMovementMode.VTOL) &&
               getClearance() > 0 &&
               !(getEntity() instanceof VTOL)) {
@@ -2016,9 +2370,10 @@ public class MoveStep implements Serializable {
         }
 
         // check for valid walk/run mp; BRACE is a special case for ProtoMeks
+        // 0 MP infantry with fast movement have runMPMax > 0 even when tmpWalkMP is 0
         if (!isJumping() &&
               !entity.isStuck() &&
-              (tmpWalkMP > 0) &&
+              ((tmpWalkMP > 0) || (runMPMax > 0)) &&
               ((getMp() > 0) || (stepType == MoveStepType.BRACE))) {
             // Prone meks can only spend MP to turn or get up
             if ((stepType != MoveStepType.TURN_LEFT) &&
@@ -2045,9 +2400,21 @@ public class MoveStep implements Serializable {
                 return;
             }
 
-            if (getMpUsed() <= tmpWalkMP) {
-                if ((getEntity().getMovementMode() == EntityMovementMode.VTOL ||
-                      getEntity().getMovementMode() == EntityMovementMode.WIGE) && getClearance() > 0) {
+            // Climbing uses walking movement only (TO:AR p.20).
+            // Multi-turn climbs are allowed - the server handles partial execution.
+            // Force MOVE_WALK and skip the run/sprint cascade (climbing's mpUsed can
+            // exceed walkMP for multi-turn climbs), but let the legality checks below
+            // (isMovementPossible, prev-step-illegal, etc.) still run.
+            if (isClimbing) {
+                movementType = EntityMovementType.MOVE_WALK;
+                LOGGER.debug("[CLIMB-TRACE] compileIllegal: isClimbing=true, set MOVE_WALK, mpUsed={}, stepType={}",
+                      getMpUsed(), stepType);
+            } else if (getMpUsed() <= tmpWalkMP) {
+                // VTOL includes powered flight infantry whose getMovementMode() returns VTOL
+                boolean isVTOLMovement = (getEntity().getMovementMode() == EntityMovementMode.VTOL ||
+                      getEntity().getMovementMode() == EntityMovementMode.WIGE) && getClearance() > 0;
+
+                if (isVTOLMovement) {
                     movementType = EntityMovementType.MOVE_VTOL_WALK;
                 } else if ((getEntity().getMovementMode() == EntityMovementMode.SUBMARINE) && getElevation() < 0) {
                     movementType = EntityMovementType.MOVE_SUBMARINE_WALK;
@@ -2063,7 +2430,9 @@ public class MoveStep implements Serializable {
                 // This ensures that Infantry always get their minimum 1 hex movement when TO fast infantry movement
                 // is on. A MovePath that consists of a single step from one hex to the next should always be a walk,
                 // since it's covered under the infantry's 1 free movement
-                if ((getEntity().getMovementMode() == EntityMovementMode.VTOL) && getClearance() > 0) {
+                // VTOL includes powered flight infantry whose getMovementMode() returns VTOL
+                boolean isVTOLMode = (getEntity().getMovementMode() == EntityMovementMode.VTOL) && getClearance() > 0;
+                if (isVTOLMode) {
                     movementType = EntityMovementType.MOVE_VTOL_WALK;
                 } else {
                     movementType = EntityMovementType.MOVE_WALK;
@@ -2076,6 +2445,11 @@ public class MoveStep implements Serializable {
             } else if (getMpUsed() <= runMPMax && isRunAllowed()) {
                 // RUN - If we got this far, entity is moving farther than a walk
                 // but within run and running is legal
+                if (isClimbing) {
+                    LOGGER.info("compileIllegal: climbing step classified as RUN! " +
+                                "mpUsed={}, walkMP={}, runMPMax={}, isRunProhibited={}, isRunAllowed={}",
+                          getMpUsed(), tmpWalkMP, runMPMax, isRunProhibited, isRunAllowed());
+                }
 
                 if (getMpUsed() > runMPNoBoost) {
                     // must be using MP booster to go this fast
@@ -2090,8 +2464,11 @@ public class MoveStep implements Serializable {
                     }
                 }
 
-                if ((entity.getMovementMode() == EntityMovementMode.VTOL ||
-                      entity.getMovementMode() == EntityMovementMode.WIGE) && getClearance() > 0) {
+                // VTOL includes powered flight infantry whose getMovementMode() returns VTOL
+                boolean isVTOLRun = (entity.getMovementMode() == EntityMovementMode.VTOL ||
+                      entity.getMovementMode() == EntityMovementMode.WIGE) && getClearance() > 0;
+
+                if (isVTOLRun) {
                     movementType = EntityMovementType.MOVE_VTOL_RUN;
                 } else if ((entity.getMovementMode() == EntityMovementMode.SUBMARINE) && getElevation() < 0) {
                     movementType = EntityMovementType.MOVE_SUBMARINE_RUN;
@@ -2111,8 +2488,11 @@ public class MoveStep implements Serializable {
                     }
                 }
 
-                if (entity.getMovementMode() == EntityMovementMode.VTOL ||
-                      (entity.getMovementMode() == EntityMovementMode.WIGE && getClearance() > 0)) {
+                // VTOL includes powered flight infantry whose getMovementMode() returns VTOL
+                boolean isVTOLSprint = entity.getMovementMode() == EntityMovementMode.VTOL ||
+                      (entity.getMovementMode() == EntityMovementMode.WIGE && getClearance() > 0);
+
+                if (isVTOLSprint) {
                     movementType = EntityMovementType.MOVE_VTOL_SPRINT;
                 } else {
                     movementType = EntityMovementType.MOVE_SPRINT;
@@ -2191,6 +2571,10 @@ public class MoveStep implements Serializable {
             if (entity.isProne()) {
                 if (((stepType != MoveStepType.TURN_LEFT && stepType != MoveStepType.TURN_RIGHT) || getMpUsed() > 1) &&
                       stepType != MoveStepType.EJECT) {
+                    if (isClimbing) {
+                        LOGGER.debug("[CLIMB-TRACE] gyro destroyed (prone): set MOVE_ILLEGAL, stepType={}",
+                              stepType);
+                    }
                     movementType = EntityMovementType.MOVE_ILLEGAL;
                 }
             } else {
@@ -2206,11 +2590,20 @@ public class MoveStep implements Serializable {
                         // We are in `Mek/non-tracked mode if the end mode is vee, and we are converting of the end
                         // mode is `Mek, and we are not converting.
                         if (isTracked == entity.isConvertingNow() && stepType != MoveStepType.CONVERT_MODE) {
+                            if (isClimbing) {
+                                LOGGER.debug("[CLIMB-TRACE] gyro destroyed (QuadVee): set MOVE_ILLEGAL, stepType={}",
+                                      stepType);
+                            }
                             movementType = EntityMovementType.MOVE_ILLEGAL;
                         }
                     } else if (!isTracked) {
                         // Non QuadVee tracked 'Meks don't actually convert. They just go, so we only need to know
                         // the end mode.
+                        if (isClimbing) {
+                            LOGGER.debug("[CLIMB-TRACE] gyro destroyed (non-tracked Mek): set MOVE_ILLEGAL, "
+                                        + "stepType={}, mp={}, mpUsed={}",
+                                  stepType, getMp(), getMpUsed());
+                        }
                         movementType = EntityMovementType.MOVE_ILLEGAL;
                     }
                 }
@@ -2223,6 +2616,7 @@ public class MoveStep implements Serializable {
               entity.isLocationBad(Mek.LOC_LEFT_ARM) &&
               entity.isLocationBad(Mek.LOC_RIGHT_ARM) &&
               (entity.isLocationBad(Mek.LOC_RIGHT_LEG) || entity.isLocationBad(Mek.LOC_LEFT_LEG))) {
+            LOGGER.debug("[STAND-TRACE] {} blocked: no arms + missing leg", stepType);
             movementType = EntityMovementType.MOVE_ILLEGAL;
             return;
         }
@@ -2233,11 +2627,21 @@ public class MoveStep implements Serializable {
               (1 == cachedEntityState.getRunMP()) &&
               (entity.mpUsed < 1) &&
               !entity.isStuck()) {
+            LOGGER.debug("[STAND-TRACE] GET_UP with 1 MP, set MOVE_RUN");
             movementType = EntityMovementType.MOVE_RUN;
         }
 
         if ((MoveStepType.CAREFUL_STAND == stepType) && (entity.mpUsed > 1)) {
+            LOGGER.debug("[STAND-TRACE] CAREFUL_STAND blocked: entity.mpUsed={}", entity.mpUsed);
             movementType = EntityMovementType.MOVE_ILLEGAL;
+        }
+
+        if ((stepType == MoveStepType.GET_UP) || (stepType == MoveStepType.CAREFUL_STAND)) {
+            LOGGER.debug("[STAND-TRACE] {} after checks: movementType={}, isProne={}, " +
+                        "isClimbing={}, entity.isClimbing={}, climbMode={}, elevation={}, " +
+                        "entity.elevation={}, entity.position={}, entity.mpUsed={}",
+                  stepType, movementType, isProne(), isClimbing, entity.isClimbing(),
+                  climbMode, elevation, entity.getElevation(), entity.getPosition(), entity.mpUsed);
         }
 
         if (isFirstStep() && ((stepType == MoveStepType.TAKEOFF) || (stepType == MoveStepType.VERTICAL_TAKE_OFF))) {
@@ -2317,8 +2721,20 @@ public class MoveStep implements Serializable {
                     if (getTargetPosition() != null) {
                         curPos = getTargetPosition();
                     }
+                    // Infantry with jump capability or glider wings dismounting from VTOLs
+                    // land at ground level, not VTOL elevation (TW p.31, IO:AE p.79)
+                    int unloadElevation = getElevation();
+                    if (entity instanceof VTOL && other.isInfantry()) {
+                        Infantry inf = (Infantry) other;
+                        if (inf.getJumpMP() > 0 || inf.canExitVTOLWithGliderWings()) {
+                            Hex destHex = game.getBoard(boardId).getHex(curPos);
+                            if (destHex != null) {
+                                unloadElevation = destHex.getLevel();
+                            }
+                        }
+                    }
                     if ((null != Compute.stackingViolation(game, other, curPos, entity, climbMode, true)) ||
-                          other.isLocationProhibited(curPos, getElevation())) {
+                          other.isLocationProhibited(curPos, unloadElevation)) {
                         movementType = EntityMovementType.MOVE_ILLEGAL;
                     }
                 } else {
@@ -2413,6 +2829,11 @@ public class MoveStep implements Serializable {
                 // Tanks and QuadVees ending movement in vehicle mode require a fortified hex.
                 if (!(game.getBoard(boardId).getHex(curPos).containsTerrain(Terrains.FORTIFIED))) {
                     movementType = EntityMovementType.MOVE_ILLEGAL;
+                } else if ((entity instanceof Tank tank) && tank.isLargeVehicleForHullDown()) {
+                    // Large Vehicles cannot use infantry-built (fortified) hexes for cover (TO:AR p.19).
+                    LOGGER.debug("[HullDown] {}: HULL_DOWN step illegal - Large Vehicles cannot use infantry-built "
+                          + "(fortified) hexes for cover", entity.getDisplayName());
+                    movementType = EntityMovementType.MOVE_ILLEGAL;
                 }
             } else if (entity.isGyroDestroyed()) {
                 // Meks need to check for valid Gyros
@@ -2453,6 +2874,28 @@ public class MoveStep implements Serializable {
             movementType = EntityMovementType.MOVE_ILLEGAL;
         }
 
+        // A unit on a bridge deck enters and leaves only through the bridge's connected hexsides (its exits): you
+        // use a bridge at its ends, not over its sides (TO:AR p.115). This covers bridges flush with the bank
+        // level - including engineer bridges over water (TO:AUE p.152) - which the climb-from-below check above misses.
+        // Bridges flush with dry ground (a bridge acting as a road) are exempt, preserving road-segment movement.
+        if (!isFirstStep() &&
+              !curPos.equals(lastPos) &&
+              (movementType != EntityMovementType.MOVE_JUMP) &&
+              (entity.getMovementMode() != EntityMovementMode.VTOL) &&
+              ((entity.getMovementMode() != EntityMovementMode.WIGE) || (getClearance() == 0))) {
+            Hex bridgeDestHex = game.getBoard(boardId).getHex(curPos);
+            Hex bridgeSrcHex = game.getBoard(boardId).getHex(lastPos);
+            // Only units that cannot traverse the terrain under the bridge are bound to use its exits; a hovercraft
+            // or naval unit crossing the water is not on the bridge and moves freely.
+            boolean leavingBridgeDeckOffExit = crossesBridgeDeckOffExit(entity, bridgeSrcHex, prev.getElevation(),
+                  lastPos, curPos);
+            boolean enteringBridgeDeckOffExit = crossesBridgeDeckOffExit(entity, bridgeDestHex, getElevation(),
+                  curPos, lastPos);
+            if (leavingBridgeDeckOffExit || enteringBridgeDeckOffExit) {
+                movementType = EntityMovementType.MOVE_ILLEGAL;
+            }
+        }
+
         // super heavy meks can't climb on buildings
         if ((entity instanceof Mek mek) &&
               mek.isSuperHeavy() &&
@@ -2461,14 +2904,19 @@ public class MoveStep implements Serializable {
             movementType = EntityMovementType.MOVE_ILLEGAL;
         }
 
-        // Check elevation change when climbing onto a building
+        // Check elevation change when climbing onto a building.
+        // TacOps Climbing (TO:AR p.20) bypass: a Mek with climb mode on and canClimb may
+        // exceed normal max elevation change to scale a building, the same way it does for
+        // cliffs. isMovementPossible already permits the step under those conditions; this
+        // check would otherwise re-reject it and flip MOVE_WALK back to MOVE_ILLEGAL,
+        // making any building climb >2 levels impossible despite the climbing option.
         if (climbMode && !isJumping()) {
             Hex curHex = game.getBoard(boardId).getHex(curPos);
             if (curHex.containsTerrain(Terrains.BUILDING)) {
                 Hex prevHex = game.getBoard(boardId).getHex(lastPos);
                 // Check if we're climbing from outside/below onto the building top
                 if (!prevHex.containsTerrain(Terrains.BUILDING) ||
-                    prevHex.terrainLevel(Terrains.BLDG_ELEV) < curHex.terrainLevel(Terrains.BLDG_ELEV)) {
+                      prevHex.terrainLevel(Terrains.BLDG_ELEV) < curHex.terrainLevel(Terrains.BLDG_ELEV)) {
                     int prevAbsoluteElev = prevHex.getLevel() + prev.getElevation();
                     int curAbsoluteElev = curHex.getLevel() + getElevation();
                     int elevChange = curAbsoluteElev - prevAbsoluteElev;
@@ -2479,7 +2927,13 @@ public class MoveStep implements Serializable {
                         maxAllowed += 1;
                     }
 
-                    if (elevChange > maxAllowed) {
+                    boolean climbingEnabled = game.getOptions()
+                          .booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_CLIMBING);
+                    boolean canTacOpsClimb = climbingEnabled
+                          && (entity instanceof Mek)
+                          && ClimbingHelper.canClimb(entity, prev.isProne())
+                          && (elevChange > 0);
+                    if ((elevChange > maxAllowed) && !canTacOpsClimb) {
                         movementType = EntityMovementType.MOVE_ILLEGAL;
                     }
                 }
@@ -2539,14 +2993,39 @@ public class MoveStep implements Serializable {
 
         // check if this movement is illegal for reasons other than points
         // Only a CHAFF step or another unloading step can follow an existing unloading step
-        if (!isMovementPossible(game, lastPos, prev.getElevation(), cachedEntityState) ||
+        // In-place actions (GET_UP, CAREFUL_STAND, etc.) should not be blocked by
+        // isMovementPossible - the entity is already at this position.
+        // A DOWN step on a climbing/dangling Mek (TO:AR p.20) likewise stays in the same hex,
+        // moving down the cliff face — isMovementPossible would reject the in-air elevation.
+        boolean isInPlaceAction = (stepType == MoveStepType.GET_UP)
+              || (stepType == MoveStepType.CAREFUL_STAND)
+              || (stepType == MoveStepType.GO_PRONE)
+              || (stepType == MoveStepType.HULL_DOWN)
+              || (isClimbing && (stepType == MoveStepType.DOWN));
+        boolean movementPossible = isInPlaceAction
+              || isMovementPossible(game, lastPos, prev.getElevation(), cachedEntityState);
+        if (!movementPossible ||
               (isUnloaded && !(type == MoveStepType.CHAFF || type == MoveStepType.UNLOAD))
         ) {
+            if (isClimbing) {
+                LOGGER.info("compileIllegal: climbing step overridden to MOVE_ILLEGAL! " +
+                            "movementPossible={}, movementType was={}, prevEl={}",
+                      movementPossible, movementType, prev.getElevation());
+            }
+            if ((stepType == MoveStepType.GET_UP) || (stepType == MoveStepType.CAREFUL_STAND)) {
+                LOGGER.debug("[STAND-TRACE] {} overridden to MOVE_ILLEGAL by isMovementPossible! " +
+                            "movementPossible={}, prevEl={}, lastPos={}, prev.movementType={}",
+                      stepType, movementPossible, prev.getElevation(), lastPos, prev.movementType);
+            }
             movementType = EntityMovementType.MOVE_ILLEGAL;
         }
 
         // If the previous step is always illegal, then so is this one
         if (EntityMovementType.MOVE_ILLEGAL == prev.movementType) {
+            if ((stepType == MoveStepType.GET_UP) || (stepType == MoveStepType.CAREFUL_STAND)) {
+                LOGGER.debug("[STAND-TRACE] {} overridden to MOVE_ILLEGAL because prev step was ILLEGAL! " +
+                      "prev.type={}", stepType, prev.type);
+            }
             movementType = EntityMovementType.MOVE_ILLEGAL;
         }
 
@@ -2688,6 +3167,14 @@ public class MoveStep implements Serializable {
               .stringOption(OptionsConstants.MISC_ENV_SPECIALIST)
               .equals(Crew.ENVIRONMENT_SPECIALIST_LIGHT);
         int nSrcEl = srcHex.getLevel() + prevEl;
+        // Use the step's actual resolved elevation. MoveStep.compile sets it correctly via
+        // ClimbingHelper.getClimbDestinationElevation for continuation climbs (top of the
+        // building roof / bridge surface / cliff top in the destination hex), so no reset is
+        // needed here. The previous "destElevation = 0 when prevStep.isClimbing() &&
+        // destHex.level > srcHex.level" workaround broke isContinuedClimb detection for
+        // climbs onto buildings or bridges sitting on elevated terrain — nDestEl came back as
+        // destHex.getLevel() (ignoring the BLDG_ELEV / BRIDGE_ELEV component) and the
+        // nDestEl > nSrcEl check below missed the climb, dropping the climbing MP cost.
         int nDestEl = destHex.getLevel() + elevation;
         PlanetaryConditions conditions = game.getPlanetaryConditions();
 
@@ -2707,6 +3194,7 @@ public class MoveStep implements Serializable {
 
         boolean applyNightPen = !game.getOptions()
               .booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_NO_NIGHT_MOVE_PEN);
+        // VTOL (includes powered flight infantry), jumping are exempt from careful movement penalties
         boolean carefulExempt = (moveMode == EntityMovementMode.VTOL) || isJumping();
 
         // Apply careful movement MP penalties for fog and light (TO pg 63)
@@ -2773,7 +3261,7 @@ public class MoveStep implements Serializable {
             }
         }
 
-        // VTOLs pay 1 for everything
+        // VTOLs pay 1 for everything (includes powered flight infantry whose getMovementMode() returns VTOL)
         if (moveMode == EntityMovementMode.VTOL) {
             return;
         }
@@ -2836,8 +3324,14 @@ public class MoveStep implements Serializable {
                   (moveMode != EntityMovementMode.BIPED_SWIM) &&
                   (moveMode != EntityMovementMode.QUAD_SWIM) &&
                   (moveMode != EntityMovementMode.WIGE)) {
+                // Water entry MP only applies when the unit is actually IN the water column at
+                // the destination — i.e., its destination elevation is at or below the hex
+                // surface. A Mek crossing a bridge over water (nDestEl above the hex level) is
+                // never wading through anything, so the water-depth MP shouldn't be charged.
+                boolean inWaterColumn = nDestEl <= destHex.getLevel();
                 // no additional cost when moving on surface of ice.
-                if (!destHex.containsTerrain(Terrains.ICE) || (nDestEl < destHex.getLevel())) {
+                if (inWaterColumn
+                      && (!destHex.containsTerrain(Terrains.ICE) || (nDestEl < destHex.getLevel()))) {
                     if ((destHex.terrainLevel(Terrains.WATER) == 1) && !isAmphibious) {
                         mp++;
                     } else if ((destHex.terrainLevel(Terrains.WATER) > 1) && !isAmphibious) {
@@ -2864,29 +3358,80 @@ public class MoveStep implements Serializable {
 
         // non-WIGEs pay for elevation differences
         if ((nSrcEl != nDestEl) && (moveMode != EntityMovementMode.WIGE)) {
-            int delta_e = Math.abs(nSrcEl - nDestEl);
+            int deltaElevation = Math.abs(nSrcEl - nDestEl);
+            if (isMek && (deltaElevation > 2)) {
+                LOGGER.debug("calcMovementCostFor elevation: prevEl={}, elevation={}, " +
+                            "srcHex.level={}, destHex.level={}, nSrcEl={}, nDestEl={}, deltaElevation={}",
+                      prevEl, elevation, srcHex.getLevel(), destHex.getLevel(),
+                      nSrcEl, nDestEl, deltaElevation);
+            }
             if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_LEAPING) &&
                   isMek &&
-                  (delta_e > 2) &&
+                  (deltaElevation > 2) &&
                   (nDestEl < nSrcEl)) {
                 // leaping (moving down more than 2 hexes) always costs 4 mp
                 // regardless of anything else
                 mp = 4;
                 return;
             }
-            // non-flying Infantry and ground vehicles are charged double.
-            if ((isInfantry &&
+            // TacOps Climbing (TO:AR p.20): Meks climbing pay 2 MP/level (2 hands)
+            // or 3 MP/level (1 hand) instead of normal elevation costs.
+            // Also applies when continuing a multi-turn climb (entity already climbing)
+            // even if remaining elevation is within normal movement limits.
+            boolean isNewClimb = (deltaElevation > entity.getMaxElevationChange())
+                  && (nDestEl > nSrcEl);
+            boolean isContinuedClimb = isClimbing && (nDestEl > nSrcEl);
+            // Climbing only applies to walking movement, not jumping or VTOL
+            boolean isWalkingMovement = (movementType != EntityMovementType.MOVE_JUMP)
+                  && (movementType != EntityMovementType.MOVE_VTOL_WALK)
+                  && (movementType != EntityMovementType.MOVE_VTOL_RUN)
+                  && (movementType != EntityMovementType.MOVE_VTOL_SPRINT);
+            boolean isClimbingMove = isMek
+                  && climbMode
+                  && isWalkingMovement
+                  && (isNewClimb || isContinuedClimb)
+                  && game.getOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_CLIMBING)
+                  && ClimbingHelper.canClimb(entity, prevStep.isProne());
+            if (isClimbingMove) {
+                int climbCostPerLevel = ClimbingHelper.getClimbingMPCostPerLevel((Mek) entity);
+                // Use player-chosen levels if set, otherwise full elevation delta
+                int chosenLevels = entity.getClimbingLevelsChosen();
+                int levelsToCharge = (chosenLevels > 0)
+                      ? Math.min(chosenLevels, deltaElevation)
+                      : deltaElevation;
+                mp += levelsToCharge * climbCostPerLevel;
+                isClimbing = true;
+                climbingTotalLevels = deltaElevation;
+                climbingChargedLevels = levelsToCharge;
+                // Climbing requires walking only (TO:AR p.20)
+                isRunProhibited = true;
+                movementType = EntityMovementType.MOVE_WALK;
+                LOGGER.debug("calcMovementCostFor: climbing {} of {} levels at {} MP/level = {} MP, " +
+                            "chosenLevels={}, movementType forced to MOVE_WALK",
+                      levelsToCharge, deltaElevation, climbCostPerLevel, levelsToCharge * climbCostPerLevel,
+                      chosenLevels);
+                return;
+            }
+            // Mountain Troops only expend 1 MP per 2 levels moved up or down (TO:AUE p.153).
+            // This stacks with the Mountaineer ability (PILOT_TM_MOUNTAINEER) which reduces
+            // elevation cost by 1 MP. Combined, a 1-level change can cost 0 MP elevation.
+            boolean isMountainTroop = entity instanceof ConvInfantry convInfantry
+                  && convInfantry.hasSpecialization(ConvInfantry.MOUNTAIN_TROOPS);
+            if (isMountainTroop) {
+                deltaElevation = (int) Math.ceil(deltaElevation / 2.0);
+            } else if ((isInfantry &&
                   !((getMovementType(false) == EntityMovementType.MOVE_VTOL_WALK) ||
                         (getMovementType(false) == EntityMovementType.MOVE_VTOL_RUN))) ||
                   ((moveMode == EntityMovementMode.TRACKED) ||
                         (moveMode == EntityMovementMode.WHEELED) ||
                         (moveMode == EntityMovementMode.HOVER))) {
-                delta_e *= 2;
+                // non-flying Infantry and ground vehicles are charged double.
+                deltaElevation *= 2;
             }
             if (entity.hasAbility(OptionsConstants.PILOT_TM_MOUNTAINEER)) {
-                mp += delta_e - 1;
+                mp += deltaElevation - 1;
             } else {
-                mp += delta_e;
+                mp += deltaElevation;
             }
         }
 
@@ -2933,8 +3478,8 @@ public class MoveStep implements Serializable {
             } else if (isMechanizedInfantry) {
                 // mechanized infantry pays 1 extra
                 mp += 1;
-            } else if (isInfantry && (((Infantry) entity).getMount() != null)) {
-                mp += ((Infantry) entity).getMount().size().buildingMP;
+            } else if (entity instanceof ConvInfantry convInfantry && (convInfantry.getMount() != null)) {
+                mp += convInfantry.getMount().size().buildingMP;
             }
         }
 
@@ -2991,6 +3536,8 @@ public class MoveStep implements Serializable {
               !entity.getCrew().isUnconscious() &&
               ((type == MoveStepType.UNJAM_RAC) ||
                     (type == MoveStepType.EJECT) ||
+                    (type == MoveStepType.LAUNCH_ESCAPE_POD) ||
+                    (type == MoveStepType.ABANDON) ||
                     (type == MoveStepType.SEARCHLIGHT))) {
             return true;
         }
@@ -3045,8 +3592,15 @@ public class MoveStep implements Serializable {
         final int destAlt;
         // For buildings (but NOT bridges), when entering from ground level in climbMode,
         // use floor elevation. Bridges should use the bridge elevation instead.
+        // Exception: TacOps Climbing allows climbing the outside of a building to the roof,
+        // so use the full building elevation when climbing is enabled.
+        boolean tacOpsClimbingAvailable = game.getOptions()
+              .booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_CLIMBING)
+              && climbMode
+              && ClimbingHelper.canClimb(entity, isProne());
         if (bld != null && getEntity().getElevation() == 0 && climbMode
-              && !destHex.containsTerrain(Terrains.BRIDGE)) {
+              && !destHex.containsTerrain(Terrains.BRIDGE)
+              && !tacOpsClimbingAvailable) {
             destAlt = destHex.floor();
         } else {
             destAlt = elevation + destHex.getLevel();
@@ -3193,7 +3747,17 @@ public class MoveStep implements Serializable {
             return false;
         }
 
-        if ((movementType != EntityMovementType.MOVE_JUMP) && (nMove != EntityMovementMode.VTOL)) {
+        // Check if using VTOL-style flight (either VTOL mode or VTOL movement type)
+        // Also explicitly check for powered flight infantry as a fallback in case getMovementMode()
+        // doesn't return VTOL (e.g., if crew/abilities aren't accessible during validation)
+        boolean hasPoweredFlight = (entity instanceof ConvInfantry infantry) && infantry.hasVTOLMovementCapability();
+        boolean isVTOLFlight = (nMove == EntityMovementMode.VTOL) ||
+              hasPoweredFlight ||
+              (movementType == EntityMovementType.MOVE_VTOL_WALK) ||
+              (movementType == EntityMovementType.MOVE_VTOL_RUN) ||
+              (movementType == EntityMovementType.MOVE_VTOL_SPRINT);
+
+        if ((movementType != EntityMovementType.MOVE_JUMP) && !isVTOLFlight) {
             int maxDown = entity.getMaxElevationDown(srcAlt);
             if (movementMode == EntityMovementMode.WIGE &&
                   (srcEl == 0 ||
@@ -3201,9 +3765,41 @@ public class MoveStep implements Serializable {
                               (srcHex.terrainLevel(Terrains.BLDG_ELEV) >= srcEl)))) {
                 maxDown = entity.getMaxElevationChange();
             }
-            if ((((srcAlt - destAlt) > 0) && ((srcAlt - destAlt) > maxDown)) ||
-                  (((destAlt - srcAlt) > 0) && ((destAlt - srcAlt) > entity.getMaxElevationChange()))) {
-                return false;
+            // TacOps Climbing (TO:AR p.20): Meks with functional arms can climb
+            // elevation changes greater than their normal max, but only when climb
+            // mode is enabled. Climb mode OFF ("Move Thru") means normal movement
+            // restrictions apply — cannot scale cliffs without climb mode.
+            boolean climbingEnabled = game.getOptions()
+                  .booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_CLIMBING);
+            boolean canUseClimbing = climbingEnabled && climbMode && ClimbingHelper.canClimb(entity, isProne());
+            // Edge descent (TO:AR p.20): Meks with at least one functional climbing arm
+            // stepping off a 3+ level edge with climb mode on can climb-down (1 arm) or
+            // dangle / drop (2 arms). The server's edge dangle/climb-down handler reinterprets
+            // the FORWARDS step. Without this clause the step would be rejected as illegal
+            // (descent > maxDown) when leaping is OFF, and ready()'s clipToPossible() would
+            // strip it before the server saw the path. Use canClimb (1 arm) not canDangle
+            // (2 arms) so one-arm climb-down still works.
+            boolean canEdgeDescend = climbingEnabled && climbMode
+                  && ClimbingHelper.canClimb(entity, isProne());
+            int elevationUp = (destAlt - srcAlt);
+            int elevationDown = (srcAlt - destAlt);
+
+            if (((elevationDown > 0) && (elevationDown > maxDown)) ||
+                  ((elevationUp > 0) && (elevationUp > entity.getMaxElevationChange()))) {
+                // Allow climbing UP if the option is enabled and entity can climb;
+                // allow climbing DOWN (edge descent) if the entity can dangle.
+                boolean allowUp = canUseClimbing && (elevationUp > 0);
+                boolean allowDown = canEdgeDescend && (elevationDown > 0);
+                if (!allowUp && !allowDown) {
+                    return false;
+                }
+                if (allowUp) {
+                    LOGGER.debug("isValidStep: allowing climbing for {} levels up (TacOps Climbing)",
+                          elevationUp);
+                } else {
+                    LOGGER.debug("isValidStep: allowing edge descent for {} levels down (TacOps Climbing)",
+                          elevationDown);
+                }
             }
         }
 
@@ -3233,9 +3829,11 @@ public class MoveStep implements Serializable {
         // except for Mountain Troops across a level 1 cliff.
         // Climbing actions do not seem to be implemented, so Infantry cannot
         // cross sheer cliffs at all except for Mountain Troops across a level 1 cliff.
-        if (entity instanceof Infantry && (isUpCliff || isDownCliff) && !isPavementStep) {
+        // Flying VTOL infantry (native VTOL, powered flight) can bypass cliffs.
+        // Note: Glider infantry cannot traverse cliffs - they only get fall damage protection.
+        if (entity instanceof ConvInfantry infantry && (isUpCliff || isDownCliff) && !isPavementStep && !isVTOLFlight) {
 
-            boolean isMountainTroop = ((Infantry) entity).hasSpecialization(Infantry.MOUNTAIN_TROOPS);
+            boolean isMountainTroop = infantry.hasSpecialization(ConvInfantry.MOUNTAIN_TROOPS);
             if (!isMountainTroop || stepHeight == 2) {
                 return false;
             }
@@ -3393,7 +3991,12 @@ public class MoveStep implements Serializable {
         // restrictions are lifted when moving along a road or bridge,
         // or when flying. Naval movement does not have the pavement
         // exemption.
+        // A unit at bridge deck elevation is standing on the bridge, not in the terrain below it, so the
+        // restrictions of the underlying terrain do not apply (TO:AR p.115). This also covers bridges without
+        // approach roads, such as those raised by Bridge-Building Engineers (TO:AUE p.152), where the step onto the
+        // bridge does not qualify as a pavement step.
         if (entity.isLocationProhibited(dest, boardId, getElevation())
+              && !isOnBridgeDeck(game.getBoard(boardId).getHex(dest), getElevation())
               // Units in prohibited terran should still be able to unload/disconnect
               &&
               (type != MoveStepType.UNLOAD) &&
@@ -3464,7 +4067,7 @@ public class MoveStep implements Serializable {
         }
 
         // Jumping into a building hex below the roof ends the move
-        // assume this applies also to sylph vtol movement
+        // Applies also to VTOL movement (includes powered flight infantry whose getMovementMode() returns VTOL)
         if (!(src.equals(dest)) &&
               (src != entity.getPosition()) &&
               (isJumping() || (entity.getMovementMode() == EntityMovementMode.VTOL)) &&
@@ -3503,6 +4106,9 @@ public class MoveStep implements Serializable {
               &&
               (type != MoveStepType.CONVERT_MODE) &&
               entity.isLocationProhibited(src, boardId, srcEl) &&
+              // Standing on a bridge deck is not standing in the prohibited terrain below it (TO:AR p.115), so
+              // a unit on a bridge without approach roads may still leave it
+              !isOnBridgeDeck(game.getBoard(boardId).getHex(src), srcEl) &&
               !isPavementStep()) {
             return false;
         }
@@ -3518,46 +4124,33 @@ public class MoveStep implements Serializable {
         }
         // Industrial elevator movement validation
         if ((type == MoveStepType.ELEVATOR_ASCEND) || (type == MoveStepType.ELEVATOR_DESCEND)) {
-            LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: Checking {} at {}, srcEl={}", type, src, srcEl);
             // Must be in a hex with an industrial elevator
             if (!srcHex.containsTerrain(Terrains.INDUSTRIAL_ELEVATOR)) {
-                LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: FAILED - No INDUSTRIAL_ELEVATOR terrain at {}",
-                      src);
                 return false;
             }
             // Get the elevator from the game
             BoardLocation elevatorLocation = BoardLocation.of(src, boardId);
             IndustrialElevator elevator = game.getIndustrialElevator(elevatorLocation);
             if (elevator == null) {
-                LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: FAILED - No elevator object for location {}",
-                      elevatorLocation);
                 return false;
             }
-            LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: Found elevator {}", elevator);
             // Elevator must be functional
             if (!elevator.isFunctional()) {
-                LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: FAILED - Elevator not functional");
                 return false;
             }
             // Platform must be at the unit's current level
             if (elevator.getPlatformLevel() != srcEl) {
-                LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: FAILED - Platform at {} but srcEl={}",
-                      elevator.getPlatformLevel(),
-                      srcEl);
                 return false;
             }
             // Check shaft bounds for the target elevation
             int targetElevation = (type == MoveStepType.ELEVATOR_ASCEND)
                   ? srcEl + 1
                   : srcEl - 1;
-            if (targetElevation > elevator.getShaftTop() || targetElevation < elevator.getShaftBottom()) {
-                LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: FAILED - Target {} outside shaft [{}, {}]",
-                      targetElevation, elevator.getShaftBottom(), elevator.getShaftTop());
+            if ((targetElevation > elevator.getShaftTop()) || (targetElevation < elevator.getShaftBottom())) {
                 return false;
             }
-            LOGGER.debug("[ELEVATOR] MoveStep.isMovementPossible: SUCCESS - Elevator move valid to level {}",
-                  targetElevation);
-            return true;  // Elevator validation complete, skip normal elevation checks
+            // Elevator validation complete, skip normal elevation checks
+            return true;
         }
         if (entity instanceof VTOL) {
             if ((type == MoveStepType.BACKWARDS) ||
@@ -3603,6 +4196,11 @@ public class MoveStep implements Serializable {
 
         // check the elevation is valid for the type of entity and hex
         if ((type != MoveStepType.DFA) && !entity.isElevationValid(elevation, destHex)) {
+            LOGGER.debug("[CLIMB-TRACE] isMovementPossible: elevation NOT valid! elevation={}, " +
+                        "destHex={}, destHex.level={}, destHex.ceiling={}, destHex.floor={}, " +
+                        "isClimbing={}, entity={}",
+                  elevation, dest, destHex.getLevel(), destHex.ceiling(), destHex.floor(),
+                  isClimbing, entity.getDisplayName());
             if (isJumping()) {
                 terrainInvalid = true;
             } else {
@@ -3624,9 +4222,21 @@ public class MoveStep implements Serializable {
     /**
      * In hexes with buildings, returns the elevation relative to the roof. Otherwise, returns the elevation relative to
      * the surface.
+     *
+     * <p>Defensive against a deserialized MoveStep whose transient entity reference exists but whose
+     * {@code Entity.getGame()} hasn't been re-bound on the server. Hit by GameDatasetLogger →
+     * SharedUtility.getPSRList while logging a freshly-received path. Falls back to raw elevation
+     * when game/hex aren't reachable; the dataset metric is best-effort, not authoritative.</p>
      */
     public int getClearance() {
-        Hex hex = entity.getGame().getBoard(boardId).getHex(getPosition());
+        Game game = (entity != null) ? entity.getGame() : null;
+        if (game == null) {
+            return elevation;
+        }
+        Hex hex = game.getBoard(boardId).getHex(getPosition());
+        if (hex == null) {
+            return elevation;
+        }
         if (hex.containsTerrain(Terrains.BLDG_ELEV)) {
             return elevation - hex.terrainLevel(Terrains.BLDG_ELEV);
         }
@@ -3639,6 +4249,32 @@ public class MoveStep implements Serializable {
 
     public int getMineToLay() {
         return mineToLay;
+    }
+
+    /**
+     * Returns the distance for Combat Vehicle Escape Pod launch (0-4 hexes). Per TO:AUE p.121, the player chooses how
+     * far the pod travels behind the vehicle.
+     *
+     * @deprecated Use getEscapePodLandingCoords() instead for hex-based selection
+     */
+    @Deprecated
+    public int getEscapePodDistance() {
+        return escapePodDistance;
+    }
+
+    /**
+     * Returns the landing coordinates for Combat Vehicle Escape Pod launch. Per TO:AUE p.121, the player chooses a hex
+     * in the rear arc within 4 hexes.
+     *
+     * @return The landing coordinates, or null if not set
+     */
+    public Coords getEscapePodLandingCoords() {
+        Integer x = additionalData.get(0);
+        Integer y = additionalData.get(1);
+        if (x != null && y != null) {
+            return new Coords(x, y);
+        }
+        return null;
     }
 
     public int getBraceLocation() {
@@ -3928,6 +4564,34 @@ public class MoveStep implements Serializable {
 
     public Minefield getMinefield() {
         return mf;
+    }
+
+    /**
+     * @return The hex a BUILD_BRIDGE step raises its bridge in, from the step's additional data, or null if the step
+     *       does not carry target coordinates.
+     */
+    public @Nullable Coords getBridgeTargetCoords() {
+        Integer targetX = additionalData.get(BRIDGE_TARGET_X_KEY);
+        Integer targetY = additionalData.get(BRIDGE_TARGET_Y_KEY);
+        if ((targetX == null) || (targetY == null)) {
+            return null;
+        }
+        return new Coords(targetX, targetY);
+    }
+
+    /**
+     * @return The exits bitmask of the two hexsides the bridge of a BUILD_BRIDGE step will connect.
+     */
+    public int getBridgeExits() {
+        return additionalData.getOrDefault(BRIDGE_EXITS_KEY, 0);
+    }
+
+    /**
+     * @return The bridge type of a BUILD_BRIDGE step, {@link ConvInfantry#BRIDGE_TYPE_LIGHT} or
+     *       {@link ConvInfantry#BRIDGE_TYPE_MEDIUM}.
+     */
+    public int getBridgeType() {
+        return additionalData.getOrDefault(BRIDGE_TYPE_KEY, ConvInfantry.BRIDGE_TYPE_LIGHT);
     }
 
     /**
